[package]
name = "gbemulator"
version = "0.1.0"
authors = ["Patric Kanngießer <mail@lpnw.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.11.0"

[dependencies.lib_gbemulation]
path = "../lib_gbemulation"

[dependencies.sdl2]
version = "0.32.2"