[package]
name = "gbemulator"
version = "0.1.0"
authors = ["Patric Kanngießer <mail@lpnw.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.11.0"
glium = "0.27.0"
toml = "0.5.6"
imgui = "0.4.0"

[dependencies.lib_gbemulation]
path = "../lib_gbemulation"
features = ["serialize"]

[dependencies.serde]
version = "1.0.111"
features = ["derive"]

[dependencies.winit]
version = "0.22.2"
features = ["serde"]