[package]
name = "gbemulator"
version = "0.1.0"
authors = ["Patric Kanngießer <mail@lpnw.de>"]
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.11.0"
wgpu = "0.12.0"
toml = "0.5.6"
tinyfiledialogs = "3.9.0"
pollster = "0.2.5"
egui = "0.16.1"
egui_wgpu_backend = "0.16.0"
egui_demo_lib = "0.16.0"
egui_winit_platform = "0.13.0"
epi = "0.16.0"

[dependencies.lib_gbemulation]
path = "../lib_gbemulation"
features = ["serialize"]

[dependencies.serde]
version = "1.0.111"
features = ["derive"]

[dependencies.imgui-winit-support]
version = "0.8.2"
features = ["winit-26"]

[dependencies.winit]
version = "0.26.1"
features = ["serde"]
