[package]
name = "lib_gbemulation"
version = "0.1.0"
authors = ["Patric Kanngießer <mail@lpnw.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
serialize = ["serde"]

[dependencies.serde]
version = "1.0.111"
features = ["derive"]
optional = true